--- a/estilos.css
+++ b/estilos.css
@@ -16,9 +16,8 @@
 }
 
 .cartao {
-    width: 65vw;
-    min-height: 280px;
-    height: 40vh;
+    width: 40vw;
+    height: 30vh;
     border: 1px solid gray;
     background-color: #FFDEAD;
     box-shadow: 5px 5px 9px #222;
@@ -37,12 +36,12 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 5vh;
-    margin-bottom: 4vh;
+    font-size: 5vmin;
+    margin-bottom: 4vmin;
 }
 
 h2 {
-    font-size: 2.5vh;
+    font-size: 2.5vmin;
 }
 
 i {
@@ -57,7 +56,7 @@ i:hover {
 }
 
 .fa {
-    font-size: 6vh;
+    font-size: 6vmin;
 }
 
 a {
