--- a/estilos.css
+++ b/estilos.css
@@ -24,7 +24,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     padding: 10px;
     box-sizing: border-box;
