--- a/estilos.css
+++ b/estilos.css
@@ -4,15 +4,27 @@
     border: 0;
 }
 
-.fundo {
-    background-image: linear-gradient(to bottom right, darkslateblue, aquamarine);
+body {
     width: 100vw;
     height: 100vh;
+}
+
+.fundo {
+    background-image: linear-gradient(to bottom right, darkslateblue, aquamarine);
+    width: 100%;
+    height: 95%;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: row;
     flex-wrap: wrap;
+}
+
+nav {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    flex-direction: row;
 }
 
 .cartao {
@@ -68,17 +80,13 @@ a {
     transform: scale(1.2);
 }
 
-nav {
-    display: flex;
-    flex-direction: row;
-}
-
 .abas {
     padding-top: 1vh;
     padding-bottom: 1vh;
     padding-left: 2vw;
     padding-right: 2vw;
     font-family: 'Roboto', sans-serif;
+    font-size: 2.5vmin;
     transition: transform .2s;
     text-align: center;
 }
