--- a/estilos.css
+++ b/estilos.css
@@ -12,33 +12,35 @@ body {
 .fundo {
     background-image: linear-gradient(to bottom right, darkslateblue, aquamarine);
     width: 100%;
-    height: 95%;
+    height: 94%;
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
 nav {
     width: 100%;
-    height: 5%;
+    height: 6%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .cartao {
     width: 40vw;
     height: 30vh;
     background-color: #FFDEAD;
-    box-shadow: 5px 5px 9px #222;
+    box-shadow: 5px 5px 9px #333;
     display: flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     padding: 10px;
     box-sizing: border-box;
-    border-radius: 12px;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
 }
 
 .icones {
@@ -81,12 +83,12 @@ a {
 }
 
 .abas {
-    padding-top: 1vh;
-    padding-bottom: 1vh;
+    padding-top: 0.7vh;
+    padding-bottom: 0.7vh;
     padding-left: 2vw;
     padding-right: 2vw;
     font-family: 'Roboto', sans-serif;
-    font-size: 2.5vmin;
+    font-size: 3.5vmin;
     transition: transform .2s;
     text-align: center;
 }
@@ -95,10 +97,27 @@ a {
     transform: scale(1.2);
 }
 
+.imagens img {
+    width: 33%;
+    padding: 2px;
+    box-sizing: border-box;
+}
+
+.imagens {
+    background-color: whitesmoke;
+}
+
 @media only screen and (max-width: 270px) {
     nav {
       flex-direction: column;
+      height: 18%;
     }
+    .imagens {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+      }
     .icone_lattes, .fa {
         height: 4vmin;
         font-size: 4vmin;
