--- a/estilos.css
+++ b/estilos.css
@@ -4,15 +4,16 @@
     border: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
-    width: 100vw;
-    height: 100vh;
+    background-image: linear-gradient(to bottom right, #222, #203a43, darkcyan); 
+    background-attachment:fixed;
 }
 
 .fundo {
-    background-image: linear-gradient(to bottom right, #222, #203a43, darkcyan); 
-    background-repeat: no-repeat;
-    background-size: auto;
     width: 100%;
     height: 100%;
     display: flex;
@@ -56,6 +57,15 @@ body {
     flex-wrap: wrap;
 }
 
+.principal{
+    width: 70%;
+    background-color: whitesmoke;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    padding: 5vmin;
+    box-sizing: border-box;
+}
+
 h1, h2 {
     font-family: 'Roboto', sans-serif;
     text-align: center;
@@ -72,6 +82,18 @@ h2 {
     font-size: 2.5vmin;
     margin-left: 2vw;
     margin-right: 2vw;
+}
+
+h3 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 3vmin;
+    margin-bottom: 2.5vmin;
+}
+
+.principal p {
+    text-align: justify;
+    margin: 3vmin;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -125,6 +147,31 @@ a {
 
 .imagens {
     background-color: whitesmoke;
+}
+
+.artigo {
+    display: flex;
+    font-family: 'Roboto', sans-serif;
+    font-size: 3vmin;
+    text-decoration: none;
+    margin-top: 5vh;
+
+}
+
+.texto_artigo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.titulo_artigo {
+    font-weight: bold;
+}
+
+.miniatura_artigo {
+    height: 25vh;
+    width: 35vh;
 }
 
 @media only screen and (max-width: 550px) {
