--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,7 @@ html, body {
 body {
     background-image: linear-gradient(to bottom right, #222, #203a43, darkcyan); 
     background-attachment:fixed;
+    font-family: 'Roboto', sans-serif;
 }
 
 .fundo {
@@ -40,7 +41,7 @@ body {
 
 .menu {
     width: 100%;
-    height: 8vh;
+    height: 7vh;
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -57,7 +58,7 @@ body {
     flex-wrap: wrap;
 }
 
-.principal{
+.principal {
     width: 70%;
     background-color: whitesmoke;
     margin-top: 3vh;
@@ -67,7 +68,6 @@ body {
 }
 
 h1, h2 {
-    font-family: 'Roboto', sans-serif;
     text-align: center;
     color: whitesmoke;
 }
@@ -76,24 +76,28 @@ h1 {
     font-size: 4.5vmin;
     margin-left: 2vw;
     margin-right: 2vw;
+    font-weight: bold;
 }
 
 h2 {
     font-size: 2.5vmin;
     margin-left: 2vw;
     margin-right: 2vw;
+    font-style: italic;
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
     font-size: 3vmin;
     margin-bottom: 2.5vmin;
+    margin-left: 1.8vmin;
+    margin-right: 1.8vmin;
+    color: #222;
 }
 
 .principal p {
     text-align: justify;
-    margin: 3vmin;
-    font-family: 'Roboto', sans-serif;
+    margin: 1.8vmin;
+    font-size: 2.4vmin;
 }
 
 a {
@@ -117,13 +121,13 @@ a {
 .abas {
     padding-left: 2vw;
     padding-right: 2vw;
-    font-family: 'Roboto', sans-serif;
-    font-size: 3.5vmin;
+    font-size: 3vmin;
     transition: transform .2s;
     text-align: center;
     vertical-align: middle;
     height: 100%;
     display: flex;
+    font-weight: bold;
 }
 
 .abas a {
@@ -151,14 +155,17 @@ a {
 
 .artigo {
     display: flex;
-    font-family: 'Roboto', sans-serif;
-    font-size: 3vmin;
+
     text-decoration: none;
     margin-top: 5vh;
-
 }
 
-.texto_artigo {
+.miniatura_artigo {
+    height: 30vmin;
+    width: 45vmin;
+}
+
+.texto_artigos p {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -169,9 +176,10 @@ a {
     font-weight: bold;
 }
 
-.miniatura_artigo {
-    height: 25vmin;
-    width: 37.5vmin;
+.perfil {
+    height: 20vmin;
+    margin: 1.8vmin;
+    border: solid 2px #222;
 }
 
 @media only screen and (max-width: 550px) {
@@ -182,7 +190,7 @@ a {
     .menu {
         flex-direction: column;
         justify-content: center;
-        height: 24vh;
+        height: 35vh;
     }
     .imagens {
         flex-direction: column;
