--- a/estilos.css
+++ b/estilos.css
@@ -26,7 +26,7 @@ body {
 
 .topo {
     width: 100%;
-    height: 20vh;
+    height: 10vw;
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -41,13 +41,13 @@ body {
 
 .menu {
     width: 100%;
-    height: 7vh;
+    height: 3.5vw;
     display: flex;
     flex-direction: row;
     justify-content: start;
     align-items: center;
     background-color: whitesmoke;
-    margin-bottom: 3vh;
+    margin-bottom: 1.5vw;
 }
 
 .icones {
@@ -61,8 +61,8 @@ body {
 .principal {
     width: 70%;
     background-color: whitesmoke;
-    margin-top: 3vh;
-    margin-bottom: 3vh;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
     padding: 5vmin;
     box-sizing: border-box;
 }
@@ -131,7 +131,7 @@ a {
 }
 
 .abas a {
-    margin-top: 1.5vh;
+    margin-top: 0.75vw;
     text-decoration: none;
 }
 
@@ -145,7 +145,7 @@ a {
 }
 .imagens img {
     width: 33%;
-    padding: 0.6vh;
+    padding: 0.3vw;
     box-sizing: border-box;
 }
 
@@ -159,7 +159,7 @@ a {
     display: flex;
 
     text-decoration: none;
-    margin-top: 5vh;
+    margin-top: 2.5vw;
 }
 
 .miniatura_artigo {
@@ -184,6 +184,19 @@ a {
     border: solid 2px #222;
 }
 
+@media only screen and (max-width: 1280px) {
+    .abas {
+        font-size: 2vmin;
+    }
+    h1 {
+        font-size: 3vmin;
+    }
+    
+    h2 {
+        font-size: 1.5vmin;
+    }
+  }
+
 @media only screen and (max-width: 550px) {
     .topo {
         flex-direction: column;
@@ -192,15 +205,15 @@ a {
     .menu {
         flex-direction: column;
         justify-content: center;
-        height: 35vh;
+        height: 17vw;
     }
     .imagens {
         flex-direction: column;
         justify-content: center;
     }
     .icones {
-        margin-top: 2vh;
-        margin-bottom: 2vh;
+        margin-top: 1vw;
+        margin-bottom: 1vw;
     }
     .artigo {
         display: flex;
